// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContactPage renders correctly 1`] = `
<main>
  <header />
  <section
    className="section"
  >
    <div
      className="container"
      ref={null}
    >
      <div
        className="justify-content-md-center row"
        ref={null}
      >
        <div
          className="col-md-8 col-12"
          ref={null}
        >
          <form />
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`ContactPageTemplate renders with content 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="container"
      ref={null}
    >
      <div
        className="justify-content-md-center row"
        ref={null}
      >
        <div
          className="col-md-8 col-12"
          ref={null}
        >
          <div>
            content
          </div>
          <hr />
        </div>
      </div>
      <div
        className="justify-content-md-center row"
        ref={null}
      >
        <div
          className="col-md-8 col-12"
          ref={null}
        >
          <form />
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`ContactPageTemplate renders with html content 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="container"
      ref={null}
    >
      <div
        className="justify-content-md-center row"
        ref={null}
      >
        <div
          className="col-md-8 col-12"
          ref={null}
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {
                    "children": "HTML content",
                  },
                  "type": "p",
                },
              }
            }
          />
          <hr />
        </div>
      </div>
      <div
        className="justify-content-md-center row"
        ref={null}
      >
        <div
          className="col-md-8 col-12"
          ref={null}
        >
          <form />
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`ContactPageTemplate renders without content 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="container"
      ref={null}
    >
      <div
        className="justify-content-md-center row"
        ref={null}
      >
        <div
          className="col-md-8 col-12"
          ref={null}
        >
          <form />
        </div>
      </div>
    </div>
  </section>,
]
`;
